Traefik/03_traefik_deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-deployment
  labels:
    app: traefik-master
    tier: reverse-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-master
      tier: reverse-proxy
  template:
    metadata:
      labels:
        app: traefik-master
        tier: reverse-proxy
    spec:
      serviceAccountName: traefik-master-service-account
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: traefik-config
        - name: traefik-acme
          gcePersistentDisk:
            pdName: traefik-acme
            fsType: ext4
      containers:
      - name: traefik
        image: "traefik:1.6"
        volumeMounts:
          - mountPath: "/etc/traefik/config"
            name: config
          - mountPath: /etc/traefik/acme
            name: traefik-acme
        args:
        - --configfile=/etc/traefik/config/traefik.toml
        - --api
        - --kubernetes
