Traefik/05_ingress_controller.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-github-insights
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: www.github-insights.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: github-insights
          servicePort: 80
      - path: /auth/github
        backend:
          serviceName: github-insights
          servicePort: 80
      - path: /auth/github/callback
        backend:
          serviceName: github-insights
          servicePort: 80
